syntax = "proto3";

package hello;

option go_package = "github.com/cshep4/grpc-course/grpcurl-example/proto";

service HelloService {
  rpc SayHello(SayHelloRequest) returns (SayHelloResponse);
}

message SayHelloRequest {
  string name = 1;
}

message SayHelloResponse {
  string message = 1;
}